2015-04-13  Araki Ken  <arakiken@users.sf.net>

	* im_wnn.c: Sign characters are converted to full width.

2015-04-12  Araki Ken  <arakiken@users.sf.net>

	* README, README.ja, man/mlterm.1: Updated.

	* configure.in: --enable-wnn is added.

	* input_method/wnn/*: Added.

	* im_canna.c: Cleanup.

	* mkf_parser.c: mkf_parser_reset() resets parser->is_eos.

2015-04-07  Araki Ken  <arakiken@users.sf.net>

	* configure.in: --enable-canna is added.

	* x_im_status_screen.[ch]:
	  - modified_beg is added to arguments of draw_screen().
	  - It is supported to draw multiple lines by '\n'.

	* inputmethod/canna/*: Added.

	* im_fcitx.c: Candidate or preedited text is converted to a terminal encoding.

2015-03-24  Araki Ken  <arakiken@users.sf.net>

	* im_fcitx.c, im_ibus.c: Minor fixes.

2015-03-22  Araki Ken  <arakiken@users.sf.net>

	* x_display_linux.c: Hack for HankakuZenkaku key is added.

	* im_ibus.c:
	  - The argument of next_engine() is changed from im_ibus_t * to IBusInputContext *.
	  - ibus->is_enabled is reversed in switch_mode() on IBus 1.5.x.

2015-03-21  Araki Ken  <arakiken@users.sf.net>

	* MLActivity.java: /sdcard/.mlterm/anim*.gif isn't splited any more.

2015-03-20  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c: HAVE_PTHREAD is defined on android.

	* x_display.c, MLActivity.java: hashPath() -> convertToTmpPath() in order to
	  support not only /sdcard but also /mnt/sdcard and /extsdcard.

	* jni/Android.mk: -DBUILTIN_IMAGELIB is added.

2015-03-18  Araki Ken  <arakiken@users.sf.net>

	* kik_path.c, android/jni/x_display.c:
	  HOME directory on android is /sdcard, /mnt/sdcard or /extsdcard.

	* jni/Android.mk, build.sh: Minor fixes.

	* ml_screen.c, ml_vt100_parser.c: The previous commit is partially reverted.

2015-03-17  Araki Ken  <arakiken@users.sf.net>

	* x_event_source.c: If ml_pty_ssh_poll() > 0, ml_pty_ssh_send_recv_x11() and
	  ml_term_parse_vt100_sequence() are called immediately instead of 'break'
	  in order not to skip select().
